# inventory-generator

./: .eslintrc.cjs  .prettierignore  CONTRIBUTING.md  DATABASE_LOCATION.md  DEBUGGING.md  ELITE_CODEBASE_ASSESSMENT.md  ELITE_OPTIMIZATIONS_COMPLETE.md  MARKETING_OVERVIEW.md  README.md  REFACTORING_SUMMARY.md  SHARED_DATABASE.md  clear-cache.sh  debug-build.sh  eslint.config.js  generate-icons.py  index.html  package.json  pnpm-lock.yaml  reset-db.sh  tail-logs.sh  test-built-app.sh  test.html  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/plans/: codebase-wide-performance-architecture-optimizations-e03668a9.plan.md  subscription-access-system-631fbfd2.plan.md  workspace-management-system-0a64d5f0.plan.md
.github/workflows/: build.yml  preview-build.yml
public/: test.html
src/: App.tsx  index.css  main.tsx  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  date_extraction.rs  error.rs  export.rs  field_extraction.rs  file_cleanup.rs  file_conversion.rs  file_ingestion.rs  file_operations.rs  file_utils.rs  lib.rs  main.rs  mappings.rs  metadata_extraction.rs  path_validation.rs  scanner.rs
src/components/: ConfigForm.tsx  ErrorBoundary.tsx  ExportDialog.tsx  FolderSelector.tsx  ImportDialog.tsx  InventoryTable.tsx  KeyboardShortcutsHint.tsx  LargeFolderWarningDialog.tsx  RecentInventories.tsx  SettingsDialog.tsx  SplashScreen.tsx  TableSkeleton.tsx  ThemeToggle.tsx
src/hooks/: useDebounce.ts  useFileChangeWarning.ts  useFileDuplicateCounts.ts  (+16 more)
(+147 files in other folders)
