[package]
name = "casespace"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "casespace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-log = "2.0"
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-store = "2.0"
log = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_xlsxwriter = "0.92"
csv = "1.3"
calamine = "0.24"
thiserror = "1.0"
sha2 = "0.10"
md5 = "0.7"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }
futures-util = "0.3"
num_cpus = "1.16"
dirs = "5.0"
base64 = "0.22"
regex = "1.10"

